Add html to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!DOCTYPE hmtl>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Garrett Bachant's website/resume">
+    <meta name="keywords" content="HTML, CSS">
+    <meta name="author" content="Garrett Bachant">
+    <title>Garrett Bachant</title>
+  </head>
+  <body>
+    <h1>Garrett Bachant</h1>
+  </body>
+</html>
