--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">GB</a>
+          <a class="navbar-brand" href="html.index">GB</a>
         </div>
         <ul class="nav navbar-nav">
           <li><a href="about.html">About</a></li>
