--- a/projects.html
+++ b/projects.html
@@ -10,12 +10,34 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <title>The Personal Website of Garrett Bachant</title>
+    <style>
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+}
+
+div.gallery:hover {
+    border: 1px solid #777;
+}
+
+div.gallery img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+</style>
   </head>
   <body>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">GB</a>
+          <a class="navbar-brand" href="index.html">GB</a>
         </div>
         <ul class="nav navbar-nav">
           <li><a href="about.html">About</a></li>
@@ -23,9 +45,39 @@
         </ul>
       </div>
     </nav>
-    <div class="container-fluid col-md-4">
-      <h1>Garrett Bachant</h1>
-      <p>I am a python programmer interested in working with and analyzing data. I am particularly interested in applying those skills to improve transit and urban planning.</p>
+    <div class="container-fluid col-md-12">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="thumbnail">
+            <a href="ripta-dash.html">
+              <img src="ripta-dashboard.png" alt="RIPTA Dashboard" style="width:100%">
+              <div class="caption">
+                <p>RIPTA Dashboard</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="thumbnail">
+            <a href="osmnx-grids.html">
+              <img src="#" alt="osmnx-grids" style="width:100%">
+              <div class="caption">
+                <p>Grid Analysis with OSMNX</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="thumbnail">
+            <a href="meta-pages.html">
+              <img src="#" alt="#" style="width:100%">
+              <div class="caption">
+                <p>Garrett Bachant's Github-pages Site</p>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
