Add CSS stylesheet

--- a/gb-github-pages.html
+++ b/gb-github-pages.html
@@ -25,10 +25,9 @@
       </div>
     </nav>
     <div>
-      <h1>RIPTA Dashboard</h1>
-      <h5>January 2018</h5>
-      <img src="ripta-animation.gif" alt="realtime RIPTA display animation" style="width:30% height:5%">
-      <p>RIPTA-Dashboard is python dashboard for viewing realtime data from its RIPTA's API. RIPTA-Dashboard is built using Ploty's framework <a href="https://plot.ly/products/dash/">Dash</a>.</p>
+      <h1>Github-Pages Portfolio</h1>
+      <h5>February 2018</h5>
+      <p>COMING SOON... (being worked on right now lol)</p>
     </div>
   </body>
 </html>
