--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="HTML, CSS">
     <meta name="author" content="Garrett Bachant">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -15,7 +16,7 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="html.index">GB</a>
+          <a class="navbar-brand" href="index.html">GB</a>
         </div>
         <ul class="nav navbar-nav">
           <li><a href="about.html">About</a></li>
