--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="HTML, CSS">
     <meta name="author" content="Garrett Bachant">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -69,7 +70,7 @@ div.desc {
         </div>
         <div class="col-md-4">
           <div class="thumbnail">
-            <a href="meta-pages.html">
+            <a href="gb-github-pages.html">
               <img src="#" alt="#" style="width:100%">
               <div class="caption">
                 <p>Garrett Bachant's Github-pages Site</p>
