Add more detail to ripta-dash.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>
       </div>
     </nav>
-    <div class="container-fluid col-md-4">
+    <div>
       <h1>Garrett Bachant</h1>
       <p>I am a python programmer interested in working with and analyzing data. I am particularly interested in applying those skills to improve transit and urban planning.</p>
     </div>
