--- a/osmnx-grids.html
+++ b/osmnx-grids.html
@@ -28,6 +28,7 @@
       <h1>Analyzing Grids with OSMnx</h1>
       <h5>February 2018</h5>
       <p>COMING SOON...</p>
+      <p><a href="https://github.com/Gbachant/osmnx-grid">View project on Github</a>
     </div>
   </body>
 </html>
