--- a/about.html
+++ b/about.html
@@ -25,7 +25,10 @@
       </div>
     </nav>
     <div class="container-fluid col-md-12">
-      <embed src="https://docs.google.com/document/d/e/2PACX-1vQT9JfRv80rPhliYkhM5m48DCDZUwm8Ncb8KYQ6VQWhMKFvivlTScQN_26Az1h0FGxVyOcQ0Pn_G29A/pub?embedded=true" width="100%" height="100%"></embed>
+      <!-- <embed src="https://docs.google.com/document/d/e/2PACX-1vQT9JfRv80rPhliYkhM5m48DCDZUwm8Ncb8KYQ6VQWhMKFvivlTScQN_26Az1h0FGxVyOcQ0Pn_G29A/pub?embedded=true" width="100%" height="100%"></embed> -->
+      <h1>Garrett Bachant</h1>
+      <h3><a href="mailto:gbachant@gmail.com">gbachant@gmail.com</a> | 774-400-8759 | <a href="https://github.com/Gbachant/Gbachant.github.io">Github</a></h3>
+      <h3>Providence, Rhode Island (But willing to relocate)</h3>
     </div>
   </body>
 </html>
