--- a/gb-github-pages.html
+++ b/gb-github-pages.html
@@ -27,7 +27,9 @@
     <div>
       <h1>Github-Pages Portfolio</h1>
       <h5>February 2018</h5>
-      <p>COMING SOON... (being worked on right now lol)</p>
+      <p>COMING SOON... (being worked on right now lol). This site was built from scratch using Bootstrap. It is hosted though github's lovely (and free) <a href="">Pages.</a> </p>
+      <p>Needing a portfolio website and still being somewhat new to web development I initially planned on using building a github-pages website in markdown with a jekyll theme. I eventually decided that I would much rather have complete control over my first site so I decided to dive right in and build it from the ground up. 
+      <p><a href="https://github.com/Gbachant/Gbachant.github.io">View project on Github</a>
     </div>
   </body>
 </html>
