Convert resume to html

--- a/about.html
+++ b/about.html
@@ -24,11 +24,63 @@
         </ul>
       </div>
     </nav>
-    <div class="container-fluid col-md-12">
+    <div>
       <!-- <embed src="https://docs.google.com/document/d/e/2PACX-1vQT9JfRv80rPhliYkhM5m48DCDZUwm8Ncb8KYQ6VQWhMKFvivlTScQN_26Az1h0FGxVyOcQ0Pn_G29A/pub?embedded=true" width="100%" height="100%"></embed> -->
       <h1>Garrett Bachant</h1>
-      <h3><a href="mailto:gbachant@gmail.com">gbachant@gmail.com</a> | 774-400-8759 | <a href="https://github.com/Gbachant/Gbachant.github.io">Github</a></h3>
-      <h3>Providence, Rhode Island (But willing to relocate)</h3>
+      <h4><a href="mailto:gbachant@gmail.com">gbachant@gmail.com</a> | 774-400-8759 | <a href="https://github.com/Gbachant/Gbachant.github.io">Github</a></h4>
+      <h4>Providence, Rhode Island <small>(But willing to relocate)</small></h4>
+    </div>
+    <hr>
+    <div>
+      <h3>Skills</h3>
+      <ul>
+        <li>Python</li>
+        <li>Git/Github</li>
+        <li>Bash</li>
+        <li>HTML/CSS</li>
+        <li>Bootstrap</li>
+        <li>Windows Office(Word, Excel, Powerpoint)</li>
+        <li>SketchUp CAD Software</li>
+        <li>Reception</li>
+        <li>Construction/Carpentry/Metalworking</li>
+      </ul>
+      <h3>Projects</h3>
+        <p>See <a href="projects.html">Projects page</a></p>
+      <h3>Experience</h3>
+        <h4><a href="https://www.facebook.com/Animal-Associates-1455735024727937/">Animal Associates</a>, Dartmouth, MA</h4>
+          <h5>Office Manager/Head Receptionist: (July 2015—November 2016)</h5>
+            <ul>
+              <li>In charge of billing, operating the front office, and opening and closing the business each day</li>
+              <li>Promoted from Head Receptionist to Office Manager in 5 months</li>
+              <li>Volunteered at “Hearts 4 Paws” animal shelter once a week</li>
+            </ul>
+        <h4><a href="https://bachantsgunshop.com/">Bachant Gun Shop</a>, Lakeville, MA</h4>
+          <h5>Gunsmith: (October 2014—July 2015)</h5>
+            <ul>
+              <li>Designed parts for fabrication using SketchUp CAD software</li>
+              <li>Cleaned, fixed, and listed firearms for sale on various online platforms</li>
+              <li>Found creative solutions to mechanical problems without clear instructions</li>
+            </ul>
+        <h4><a href="http://billbachantbuilders.com/">Bachant Builders</a>, Wareham, MA</h4>
+          <h5>Foreman/Carpenter: (April 2009—November 2013 / November 2016—January 2018)</h5>
+            <ul>
+              <li>Used SketchUp to design blueprints for mapping building dimensions</li>
+              <li>Had experience doing finish carpentry and installing cabinets</li>
+              <li>Duties included carpentry/woodworking, automotive repair, masonry, metalworking</li>
+            </ul>
+      <h3>Education</h3>
+        <h4>Bristol Community College, Fall River, MA (2015—)</h4>
+          <ul>
+            <li>General Studies</li>
+          </ul>
+        <h4>Apponequet Regional High School, Lakeville, MA (2009—2013)</h>
+          <ul>
+            <li>Advance Placement and Honors courses</li>
+          </ul>
+    </div>
+    <hr>
+    <div>
+       <a href="garrettbachantresume.pdf" download>Download Resume as PDF</a>
     </div>
   </body>
 </html>
