organize images into one file and expand detail in projects

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <title>The Personal Website of Garrett Bachant</title>
+    <title>Garrett Bachant</title>
   </head>
   <body>
     <nav class="navbar navbar-default">
@@ -27,7 +27,7 @@
     <div>
       <!-- <embed src="https://docs.google.com/document/d/e/2PACX-1vQT9JfRv80rPhliYkhM5m48DCDZUwm8Ncb8KYQ6VQWhMKFvivlTScQN_26Az1h0FGxVyOcQ0Pn_G29A/pub?embedded=true" width="100%" height="100%"></embed> -->
       <h1>Garrett Bachant</h1>
-      <h4><a href="mailto:gbachant@gmail.com">gbachant@gmail.com</a> | 774-400-8759 | <a href="https://github.com/Gbachant/Gbachant.github.io">Github</a></h4>
+      <h4><a href="mailto:gbachant@gmail.com">gbachant@gmail.com</a> | 774-400-8759 | <a href="https://github.com/Gbachant/Gbachant.github.io">GitHub</a></h4>
       <h4>Providence, Rhode Island <small>(But willing to relocate)</small></h4>
     </div>
     <hr>
@@ -35,12 +35,14 @@
       <h3>Skills</h3>
       <ul>
         <li>Python</li>
-        <li>Git/Github</li>
+        <li>Pandas</li>
+        <li>Git/GitHub</li>
         <li>Bash</li>
         <li>HTML/CSS</li>
         <li>Bootstrap</li>
         <li>Windows Office(Word, Excel, Powerpoint)</li>
         <li>SketchUp CAD Software</li>
+        <li>French(intermediate)</li>
         <li>Reception</li>
         <li>Construction/Carpentry/Metalworking</li>
       </ul>
@@ -73,14 +75,14 @@
           <ul>
             <li>General Studies</li>
           </ul>
-        <h4>Apponequet Regional High School, Lakeville, MA (2009—2013)</h>
+        <h4>Apponequet Regional High School, Lakeville, MA (2009—2013)</h4>
           <ul>
             <li>Advance Placement and Honors courses</li>
           </ul>
     </div>
     <hr>
     <div>
-       <a href="garrettbachantresume.pdf" download>Download Resume as PDF</a>
+       <a href="pictures/garrettbachantresume.pdf" download>Download Resume as PDF</a>
     </div>
   </body>
 </html>
