--- a/gb-github-pages.html
+++ b/gb-github-pages.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <title>The Personal Website of Garrett Bachant</title>
+    <title>Garrett Bachant</title>
   </head>
   <body>
     <nav class="navbar navbar-default">
@@ -27,8 +27,8 @@
     <div>
       <h1>Github-Pages Portfolio</h1>
       <h5>February 2018</h5>
-      <p>COMING SOON... (being worked on right now lol). This site was built from scratch using Bootstrap. It is hosted though github's lovely (and free) <a href="">Pages.</a> </p>
-      <p>Needing a portfolio website and still being somewhat new to web development I initially planned on using building a github-pages website in markdown with a jekyll theme. I eventually decided that I would much rather have complete control over my first site so I decided to dive right in and build it from the ground up. 
+      <p>This site was built from scratch using Bootstrap. It is hosted though GitHub's lovely (and free) <a href="">Pages.</a></p>
+      <p>Needing a portfolio website and still being somewhat new to web development I initially planned on using building a GitHub-pages website in markdown with a jekyll theme. I eventually decided that I would much rather have the full experience of building a website so I decided to dive right in and build it from the ground up.
       <p><a href="https://github.com/Gbachant/Gbachant.github.io">View project on Github</a>
     </div>
   </body>
