--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <title>The Personal Website of Garrett Bachant</title>
+    <title>Garrett Bachant</title>
   </head>
   <body>
     <nav class="navbar navbar-default">
@@ -24,12 +24,12 @@
         </ul>
       </div>
     </nav>
-    <div class="container-fluid col-md-12">
+    <div class="container-fluid col-md-12" id="project-gallery" style="margin:auto">
       <div class="row">
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="ripta-dash.html">
-              <img src="ripta-dashboard.png" alt="RIPTA Dashboard" style="width:100%">
+              <img src="pictures/ripta-dashboard.png" alt="RIPTA Dashboard" style="width:100%">
               <div class="caption">
                 <p>RIPTA Dashboard</p>
               </div>
@@ -39,9 +39,9 @@
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="osmnx-grids.html">
-              <img src="#" alt="osmnx-grids" style="width:100%">
+              <img src="pictures/osmnx_nyc_closeup.png" alt="osmnx-grids of New York City by compass bearing" style="width:100%">
               <div class="caption">
-                <p>Grid Analysis with OSMNX</p>
+                <p>Grid Analysis with OSMnx</p>
               </div>
             </a>
           </div>
@@ -49,9 +49,9 @@
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="gb-github-pages.html">
-              <img src="#" alt="#" style="width:100%">
+              <img src="pictures/" alt="Screenshot of Gbachant.github.io" style="width:100%">
               <div class="caption">
-                <p>Garrett Bachant's Github-pages Site</p>
+                <p>This Site</p>
               </div>
             </a>
           </div>
