--- a/osmnx-grids.html
+++ b/osmnx-grids.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <title>The Personal Website of Garrett Bachant</title>
+    <title>Garrett Bachant</title>
   </head>
   <body>
     <nav class="navbar navbar-default">
@@ -27,7 +27,10 @@
     <div>
       <h1>Analyzing Grids with OSMnx</h1>
       <h5>February 2018</h5>
-      <p>COMING SOON...</p>
+      <p>This is project I have been interested in for a while. It was inspired by looking at the beautiful and chaotic mixing together of grids in New York City, <a href="https://www.google.com/maps/place/Brooklyn,+NY/@40.6565306,-73.9934036,12.5z/data=!4m5!3m4!1s0x89c24416947c2109:0x82765c7404007886!8m2!3d40.6781784!4d-73.9441579">Brookyn</a> in particular. I became interested in finding a way to organize and analyze the relationships of the various grids based on angles of their bearings. It wasn't until I found <a href="https://github.com/gboeing/osmnx">OSMnx</a>, a python package for working with and analyzing OpenStreetMap files made by <a href="http://geoffboeing.com/">Geoff Boeing</a>, that I was able to find the right tool to do so.</p>
+      <p>OSMnx comes with many useful functions for analyzing maps by default such as the ability graph the average bearing of a set of streets or 'edges' as they are called. OSMnx already comes with abilty to retrieve and graph the </p>
+      <p><a href=" ">View contribution to OSMnx sourcecode</a>
+      <p><a href=" ">View Python Jupyter Notebook example</a>
       <p><a href="https://github.com/Gbachant/osmnx-grid">View project on Github</a>
     </div>
   </body>
