Add images for projects

--- a/osmnx-grids.html
+++ b/osmnx-grids.html
@@ -29,11 +29,14 @@
     <div>
       <h1>Analyzing Grids with OSMnx</h1>
       <h5>February 2018</h5>
+      <img src="pictures/osmnx_nyc.png">
+      <img src="pictures/osmnx_nyc_closeup.png">
+      <img src="pictures/osmnx_williamsburg.png">
       <p>This is project I have been interested in for a while. It was inspired by looking at the beautiful and chaotic mixing together of grids in New York City, <a href="https://www.google.com/maps/place/Brooklyn,+NY/@40.6565306,-73.9934036,12.5z/data=!4m5!3m4!1s0x89c24416947c2109:0x82765c7404007886!8m2!3d40.6781784!4d-73.9441579">Brookyn</a> in particular. I became interested in finding a way to organize and analyze the relationships of the various grids based on angles of their bearings. It wasn't until I found <a href="https://github.com/gboeing/osmnx">OSMnx</a>, a python package for working with and analyzing OpenStreetMap files made by <a href="http://geoffboeing.com/">Geoff Boeing</a>, that I was able to find the right tool to do so.</p>
-      <p>OSMnx comes with many useful functions for analyzing maps by default such as the ability graph the average bearing of a set of streets or 'edges' as they are called. OSMnx already comes with abilty to retrieve the bearings of a network's streets and graph their frequency, but this wasn't enough.</p>
+      <p>OSMnx comes with many useful functions for analyzing maps by default such as the ability graph the average bearing of a set of streets or 'edges' as they are called. OSMnx already comes with abilty to retrieve the bearings of a network's streets and <a href="https://github.com/gboeing/osmnx-examples/blob/master/notebooks/15-calculate-visualize-edge-bearings.ipynb">graph their frequency</a>, but this wasn't enough.</p>
       <p>[STILL MORE TOFILL OUT]</p>
       <p><a href="https://github.com/Gbachant/osmnx/tree/add-bearing-analysis">View contribution to OSMnx sourcecode on GitHub</a>
-      <p><a href="https://github.com/gboeing/osmnx-examples/pull/5">View Python Jupyter Notebook example on GitHub</a>
+      <p><a href="https://github.com/Gbachant/osmnx-examples/blob/add-bearing-analysis-example/notebooks/17-edge-bearing-analysis.ipynb">View Python Jupyter Notebook example on GitHub</a>
       <p><a href="https://github.com/Gbachant/osmnx-grid">View project on GitHub</a>
     </div>
   </body>
