--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="osmnx-grids.html">
-              <img src="pictures/osmnx_nyc_closeup.png" alt="osmnx-grids of New York City by compass bearing" style="width:100%">
+              <img src="pictures/osmnx_nyc.png" alt="osmnx-grids of New York City by compass bearing" style="width:100%">
               <div class="caption">
                 <p>Grid Analysis with OSMnx</p>
               </div>
@@ -51,7 +51,7 @@
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="gb-github-pages.html">
-              <img src="pictures/" alt="Screenshot of Gbachant.github.io" style="width:100%">
+              <img src="pictures/Favicon.png" alt="Favicon of Gbachant.github.io" style="width:100%">
               <div class="caption">
                 <p>This Site</p>
               </div>
