add carousel and more detail to osmnx-grids.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
     <div>
       <h1>Garrett Bachant</h1>
-      <p>I am a python programmer interested in working with and analyzing data. I am particularly interested in applying those skills to improve transit and urban planning.</p>
+      <p>I am a python programmer interested in working with and analyzing data. I am particularly interested in applying those skills to improve transit and urban planning, though also interested in a diverse range of other areas including linguistics/languages, history, geography, music, sociology, philosophy, psychlogy, education, and mathematics.</p>
     </div>
   </body>
 </html>
