--- a/gb-github-pages.html
+++ b/gb-github-pages.html
@@ -29,8 +29,8 @@
     <div>
       <h1>Github-Pages Portfolio</h1>
       <h5>February 2018</h5>
-      <p>This site was built from scratch using Bootstrap. It is hosted though GitHub's lovely (and free) <a href="https://pages.github.com/">Pages.</a></p>
-      <p>Needing a portfolio website and still being somewhat new to web development I initially planned on using building a GitHub-pages website in markdown with a jekyll theme. I eventually decided that I would much rather have the full experience of building a website so I decided to dive right in and build it from the ground up.
+      <p>Needing a portfolio website and still being somewhat new to web development I decided to build my own website.</p>
+      <p>This site was built from scratch using Bootstrap. It is hosted though GitHub's lovely (and free) <a href="https://pages.github.com/">Pages.</a> I initially planned on using building a GitHub-pages website in markdown with a jekyll theme. I eventually decided that I would much rather have the full experience of building a website so I decided to dive right in and build it from the ground up.
       <p><a href="https://github.com/Gbachant/Gbachant.github.io">View project on GitHub</a>
     </div>
   </body>
