--- a/osmnx-grids.html
+++ b/osmnx-grids.html
@@ -29,12 +29,54 @@
     <div>
       <h1>Analyzing Grids with OSMnx</h1>
       <h5>February 2018</h5>
-      <img src="pictures/osmnx_nyc.png">
-      <img src="pictures/osmnx_nyc_closeup.png">
-      <img src="pictures/osmnx_williamsburg.png">
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+
+        <div class="carousel-inner">
+          <div class="item active">
+            <img src="pictures/osmnx_nyc.png" alt="osmnx-grids of New York City by compass bearing">
+            <div class="carousel-caption">
+              <h3>Los Angeles</h3>
+              <p>LA is always so much fun!</p>
+            </div>
+          </div>
+
+          <div class="item">
+            <img src="pictures/osmnx_nyc_closeup.png" alt="">
+            <div class="carousel-caption">
+              <h3>Chicago</h3>
+              <p>Thank you, Chicago!</p>
+            </div>
+          </div>
+
+          <div class="item">
+            <img src="pictures/osmnx_williamsburg.png" alt="">
+            <div class="carousel-caption">
+              <h3>New York</h3>
+              <p>We love the Big Apple!</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
       <p>This is project I have been interested in for a while. It was inspired by looking at the beautiful and chaotic mixing together of grids in New York City, <a href="https://www.google.com/maps/place/Brooklyn,+NY/@40.6565306,-73.9934036,12.5z/data=!4m5!3m4!1s0x89c24416947c2109:0x82765c7404007886!8m2!3d40.6781784!4d-73.9441579">Brookyn</a> in particular. I became interested in finding a way to organize and analyze the relationships of the various grids based on angles of their bearings. It wasn't until I found <a href="https://github.com/gboeing/osmnx">OSMnx</a>, a python package for working with and analyzing OpenStreetMap files made by <a href="http://geoffboeing.com/">Geoff Boeing</a>, that I was able to find the right tool to do so.</p>
       <p>OSMnx comes with many useful functions for analyzing maps by default such as the ability graph the average bearing of a set of streets or 'edges' as they are called. OSMnx already comes with abilty to retrieve the bearings of a network's streets and <a href="https://github.com/gboeing/osmnx-examples/blob/master/notebooks/15-calculate-visualize-edge-bearings.ipynb">graph their frequency</a>, but this wasn't enough.</p>
-      <p>[STILL MORE TOFILL OUT]</p>
+      <p>Anyone familiar with working with OpensStreetMap files will know that they aren't exactly perfect representations. This is due to the very nature of how they are created. OSM files are composed of nodes and ways. Most of these nodes and ways placed by humans physically overlaying them on satellite imagery and the mappings can be prone to human error.  As a result, nodes that should theoretically be perfectly aligned and ordered are not and ways that should be perfectly straight are not aswell.</p>
+      <p>To overcome this I accessed the <code>bearing</code> attribute inside the networkx multidigraph and created another attribute,<code>rounded_bearing</code>, composed of <code>bearing</code> rounded to an integer. This allows us to filter the graph by edge bearings much easier</p>
+      <p>I also added another attribute <code>modulo_bearing</code> which is just the <code>rounded_bearing</code>modulo 90. By using modulo 90 I was able to get all edges placed into 90 groups which would be composed of edges who share either parallel or perpendicular edge bearings. From there I was able use an osmnx function,<code>Osmnx.get_edge_colors_by_attr()</code>, to assign a different color to edge 90 groups of edges and eventually plot them.</p>
       <p><a href="https://github.com/Gbachant/osmnx/tree/add-bearing-analysis">View contribution to OSMnx sourcecode on GitHub</a>
       <p><a href="https://github.com/Gbachant/osmnx-examples/blob/add-bearing-analysis-example/notebooks/17-edge-bearing-analysis.ipynb">View Python Jupyter Notebook example on GitHub</a>
       <p><a href="https://github.com/Gbachant/osmnx-grid">View project on GitHub</a>
