--- a/osmnx-grids.html
+++ b/osmnx-grids.html
@@ -40,24 +40,24 @@
           <div class="item active">
             <img src="pictures/osmnx_nyc.png" alt="osmnx-grids of New York City by compass bearing">
             <div class="carousel-caption">
-              <h3>Los Angeles</h3>
-              <p>LA is always so much fun!</p>
+              <h3>Downtown Manhattan and Brooklyn</h3>
+              <p>Each group of perpendicular bearings is represented by a different color. The grouping of grids becomes immediately apparent. What is most interested are groups of grids that aren't connected; though they are physically seperated they still follow the same bearings. For instance note the two purple bearing groups: one at the Brooklyn sides of the Brooklyn and Manhattan bridges and the other to the far east of Prospect Park in the bottom left corner of the image.</p>
             </div>
           </div>
 
           <div class="item">
-            <img src="pictures/osmnx_nyc_closeup.png" alt="">
+            <img src="pictures/osmnx_nyc_closeup.png" alt="closeup of osmnx-grids of New York City">
             <div class="carousel-caption">
-              <h3>Chicago</h3>
-              <p>Thank you, Chicago!</p>
+              <h3>Closeup of downtown Manhattan and Brooklyn</h3>
+              <p>Note how the purple bearings on the Brooklyn ends of the Manhattan and Brooklyn bridges merge with and become part of the grids of the dark orange bearings just south of the Brooklyn Navy Yard. One of the main things I was interested in doing with this project was analyzing the 'borders' of groups of grids and how their edges met to bond together. </p>
             </div>
           </div>
 
           <div class="item">
-            <img src="pictures/osmnx_williamsburg.png" alt="">
+            <img src="pictures/osmnx_williamsburg.png" alt="osmnx-grids of Williamsburg, Brooklyn">
             <div class="carousel-caption">
-              <h3>New York</h3>
-              <p>We love the Big Apple!</p>
+              <h3>Williamsburg, Brooklyn</h3>
+              <p>A close up of Williamsburg, a neighborhood of Brooklyn with a particularly interesting street pattern. Note the rainbow pattern on the curved sections of the Williamsburg Bridge and Interstate 278 as it changes as its segments change bearings.</p>
             </div>
           </div>
         </div>
@@ -72,12 +72,12 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-      <p>This is project I have been interested in for a while. It was inspired by looking at the beautiful and chaotic mixing together of grids in New York City, <a href="https://www.google.com/maps/place/Brooklyn,+NY/@40.6565306,-73.9934036,12.5z/data=!4m5!3m4!1s0x89c24416947c2109:0x82765c7404007886!8m2!3d40.6781784!4d-73.9441579">Brookyn</a> in particular. I became interested in finding a way to organize and analyze the relationships of the various grids based on angles of their bearings. It wasn't until I found <a href="https://github.com/gboeing/osmnx">OSMnx</a>, a python package for working with and analyzing OpenStreetMap files made by <a href="http://geoffboeing.com/">Geoff Boeing</a>, that I was able to find the right tool to do so.</p>
+      <p>This is project I have been interested in for quite some time now. It was inspired by looking at the beautiful and chaotic mixing together of grids in New York City, <a href="https://www.google.com/maps/place/Brooklyn,+NY/@40.6565306,-73.9934036,12.5z/data=!4m5!3m4!1s0x89c24416947c2109:0x82765c7404007886!8m2!3d40.6781784!4d-73.9441579">Brookyn</a> in particular. I became interested in finding a way to organize and analyze the relationships of the various grids based on angles of their bearings. It wasn't until I found <a href="https://github.com/gboeing/osmnx">OSMnx</a>, a python package for working with and analyzing OpenStreetMap files made by <a href="http://geoffboeing.com/">Geoff Boeing</a>, that I was able to find the right tool to do so.</p>
       <p>OSMnx comes with many useful functions for analyzing maps by default such as the ability graph the average bearing of a set of streets or 'edges' as they are called. OSMnx already comes with abilty to retrieve the bearings of a network's streets and <a href="https://github.com/gboeing/osmnx-examples/blob/master/notebooks/15-calculate-visualize-edge-bearings.ipynb">graph their frequency</a>, but this wasn't enough.</p>
-      <p>Anyone familiar with working with OpensStreetMap files will know that they aren't exactly perfect representations. This is due to the very nature of how they are created. OSM files are composed of nodes and ways. Most of these nodes and ways placed by humans physically overlaying them on satellite imagery and the mappings can be prone to human error.  As a result, nodes that should theoretically be perfectly aligned and ordered are not and ways that should be perfectly straight are not aswell.</p>
-      <p>To overcome this I accessed the <code>bearing</code> attribute inside the networkx multidigraph and created another attribute,<code>rounded_bearing</code>, composed of <code>bearing</code> rounded to an integer. This allows us to filter the graph by edge bearings much easier</p>
-      <p>I also added another attribute <code>modulo_bearing</code> which is just the <code>rounded_bearing</code>modulo 90. By using modulo 90 I was able to get all edges placed into 90 groups which would be composed of edges who share either parallel or perpendicular edge bearings. From there I was able use an osmnx function,<code>Osmnx.get_edge_colors_by_attr()</code>, to assign a different color to edge 90 groups of edges and eventually plot them.</p>
-      <p><a href="https://github.com/Gbachant/osmnx/tree/add-bearing-analysis">View contribution to OSMnx sourcecode on GitHub</a>
+      <p>Anyone familiar with working with OpensStreetMap files will know that they aren't exactly perfect representations. This is due to the very nature of how they are created. OSM files are composed of nodes and ways. Most of these nodes and ways placed by humans physically overlaying them on satellite imagery and can be prone to human error.  As a result, nodes and ways that should theoretically be perfectly aligned and ordered are not.</p>
+      <p>To overcome this I accessed the <code>bearing</code> attribute inside the networkx multidigraph and created another attribute,<code>rounded_bearing</code>, composed of <code>bearing</code> rounded to an integer. This allows us to filter the graph by edge bearings much easier and even chose to only graph the bearings that we desire.</p>
+      <p>I also added another attribute <code>modulo_bearing</code> which is just the <code>rounded_bearing</code>modulo 90. By using modulo 90 I was able to get all edges placed into 90 groups which would be composed of edges who share either parallel or perpendicular edge bearings. From there I was able use an osmnx function,<code>osmnx.get_edge_colors_by_attr()</code>, to assign a different color to each of the 90 groups of edges and eventually plot them.</p>
+      <p><a href="https://github.com/gboeing/osmnx/pull/135/files">View contribution to OSMnx sourcecode on GitHub</a>
       <p><a href="https://github.com/Gbachant/osmnx-examples/blob/add-bearing-analysis-example/notebooks/17-edge-bearing-analysis.ipynb">View Python Jupyter Notebook example on GitHub</a>
       <p><a href="https://github.com/Gbachant/osmnx-grid">View project on GitHub</a>
     </div>
