--- a/about.html
+++ b/about.html
@@ -84,7 +84,9 @@
     </div>
     <hr>
     <div>
-       <a href="pictures/garrettbachantresume.pdf" download>Download Resume as PDF</a>
+      <a href="https://docs.google.com/document/d/1pOaMSXkLnT-JD91GyqNWhtp43aePwFCRYsTrZAiVEMs/edit?usp=sharing">View Resume on Google Docs</a>
+      <br>
+      <a href="pictures/garrettbachantresume.pdf" download>Download Resume as PDF</a>
     </div>
   </body>
 </html>
