Add jumbotron to index

--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
         </ul>
       </div>
     </nav>
-    <div>
-      <h1>Garrett Bachant</h1>
-      <p id="intro-paragraph">I am a python programmer into working with and analyzing data. I am particularly interested in applying those skills to improve transit and urban planning, though my interest include a diverse range of other areas including linguistics/languages, history, geography, music, sociology, philosophy, psychlogy, education, and mathematics.</p>
+    <div id="index-background">
+      <div class="container">
+        <div class="jumbotron">
+          <h1>Garrett Bachant</h1>
+          <p id="intro-paragraph">I am a python programmer into working with and analyzing data. I am particularly interested in applying those skills to improve transit and urban planning, though my interest include a diverse range of other areas including linguistics/languages, history, geography, music, sociology, philosophy, psychlogy, education, and mathematics.</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
