Fix project gallery thumbnail height

--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
         </ul>
       </div>
     </nav>
-    <div class="container-fluid col-md-12" id="project-gallery" style="margin:auto">
+    <div class="container-fluid col-md-12" id="project-gallery">
       <div class="row">
         <div class="col-md-4">
           <div class="thumbnail">
@@ -41,7 +41,7 @@
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="osmnx-grids.html">
-              <img src="pictures/osmnx_nyc.png" alt="osmnx-grids of New York City by compass bearing" style="width:100%">
+              <img src="pictures/osmnx_nyc_crop.png" alt="osmnx-grids of New York City by compass bearing" style="width:100%">
               <div class="caption">
                 <p>Grid Analysis with OSMnx</p>
               </div>
