Add bottom-padding to footers

--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
     <div>
       <a href="https://docs.google.com/document/d/1pOaMSXkLnT-JD91GyqNWhtp43aePwFCRYsTrZAiVEMs/edit?usp=sharing">View Resume on Google Docs</a>
       <br>
-      <a href="pictures/garrettbachantresume.pdf" download>Download Resume as PDF</a>
+      <a href="pictures/garrettbachantresume.pdf" class="footer" download>Download Resume as PDF</a>
     </div>
   </body>
 </html>
