--- a/osmnx-grids.html
+++ b/osmnx-grids.html
@@ -80,7 +80,7 @@
       <hr>
       <p><a href="https://github.com/gboeing/osmnx/pull/135/files">View contribution to OSMnx sourcecode on GitHub</a>
       <p><a href="https://github.com/Gbachant/osmnx-examples/blob/add-bearing-analysis-example/notebooks/17-edge-bearing-analysis.ipynb">View Python Jupyter Notebook example on GitHub</a>
-      <p><a href="https://github.com/Gbachant/osmnx-grid">View project on GitHub</a>
+      <p><a href="https://github.com/Gbachant/osmnx-grid" class="footer">View project on GitHub</a>
     </div>
   </body>
 </html>
