--- a/gb-github-pages.html
+++ b/gb-github-pages.html
@@ -32,7 +32,7 @@
       <p>Needing a portfolio website and still being somewhat new to web development I decided to build my own website.</p>
       <p>This site was built from scratch using Bootstrap. It is hosted though GitHub's lovely (and free) <a href="https://pages.github.com/">Pages.</a> I initially planned on using building a GitHub-pages website in markdown with a jekyll theme. I eventually decided that I would much rather have the full experience of building a website so I decided to dive right in and build it from the ground up.</p>
       <hr>
-      <p><a href="https://github.com/Gbachant/Gbachant.github.io">View project on GitHub</a></p>
+      <p><a href="https://github.com/Gbachant/Gbachant.github.io" class="footer">View project on GitHub</a></p>
     </div>
   </body>
 </html>
