--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         </ul>
       </div>
     </nav>
-    <div id="index-background">
+    <!-- <div id="index-background" style="height:100%"> -->
+    <div style="background-image: url(pictures/ripta-animation.gif);">
+      <img src="pictures/ripta-animation.gif" style="visibility: hidden;" />
       <div class="container">
         <div class="jumbotron">
           <h1>Garrett Bachant</h1>
