fix background and add footer to index.html

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
       </div>
     </nav>
     <!-- <div id="index-background" style="height:100%"> -->
-    <div style="background-image: url(pictures/ripta-animation.gif);">
-      <img src="pictures/ripta-animation.gif" style="visibility: hidden;" />
+    <div id="index-background">
       <div class="container">
         <div class="jumbotron">
           <h1>Garrett Bachant</h1>
@@ -36,5 +35,6 @@
         </div>
       </div>
     </div>
+    <footer>©2018 Garrett Bachant</footer>
   </body>
 </html>
