--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="container">
         <div class="jumbotron">
           <h1>Garrett Bachant</h1>
-          <p id="intro-paragraph">I am a python programmer into working with and analyzing data. I am particularly interested in applying those skills to improve transit and urban planning, though my interest include a diverse range of other areas including linguistics/languages, history, geography, music, sociology, philosophy, psychlogy, education, and mathematics.</p>
+          <p id="intro-paragraph">I am a python programmer passionate about working with and analyzing data. I am particularly interested in applying those skills to improve transit and urban planning. Though my interests include a diverse range of other areas including linguistics/languages, history, geography, music, sociology, philosophy, psychlogy, education, bicycles, and cats.</p>
         </div>
       </div>
     </div>
