fix wording and background on index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Garrett Bachant</title>
   </head>
   <body>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default" style="margin-bottom:0">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="index.html">GB</a>
@@ -26,12 +26,11 @@
         </ul>
       </div>
     </nav>
-    <!-- <div id="index-background" style="height:100%"> -->
     <div id="index-background">
       <div class="container">
-        <div class="jumbotron">
+        <div class="jumbotron" style="margin-top:20px">
           <h1>Garrett Bachant</h1>
-          <p id="intro-paragraph">I am a python programmer passionate about working with and analyzing data. I am particularly interested in applying those skills to improve transit and urban planning. Though my interests include a diverse range of other areas including linguistics/languages, history, geography, music, sociology, philosophy, psychlogy, education, bicycles, and cats.</p>
+          <p id="intro-paragraph" style="margin-left:30px">I am a Python programmer passionate about working with and analyzing data. I am particularly interested in applying those skills to improve transit and urban planning. Other interests include a diverse range of other areas including linguistics/languages, history, geography, music, sociology, philosophy, psychology, education, and mathematics.</p>
         </div>
       </div>
     </div>
