--- a/osmnx-grids.html
+++ b/osmnx-grids.html
@@ -41,7 +41,7 @@
             <img class="carousel-image" src="pictures/osmnx_nyc.png" alt="osmnx-grids of New York City by compass bearing">
             <div class="carousel-caption">
               <h3>Downtown Manhattan and Brooklyn</h3>
-              <p>Each group of perpendicular bearings is represented by a different color. The grouping of grids becomes immediately apparent. What is most interested are groups of grids that aren't connected; though they are physically seperated they still follow the same bearings. For instance note the two purple bearing groups: one at the Brooklyn sides of the Brooklyn and Manhattan bridges and the other to the far east of Prospect Park in the bottom left corner of the image.</p>
+              <p style="padding-left:33%">Each group of perpendicular bearings is represented by a different color. The grouping of grids becomes immediately apparent. What is most interested are groups of grids that aren't connected; though they are physically seperated they still follow the same bearings. For instance note the two purple bearing groups: one at the Brooklyn sides of the Brooklyn and Manhattan bridges and the other to the far east of Prospect Park in the bottom left corner of the image.</p>
             </div>
           </div>
 
@@ -49,7 +49,7 @@
             <img src="pictures/osmnx_nyc_closeup.png" alt="closeup of osmnx-grids of New York City">
             <div class="carousel-caption">
               <h3>Closeup of downtown Manhattan and Brooklyn</h3>
-              <p>Note how the purple bearings on the Brooklyn ends of the Manhattan and Brooklyn bridges merge with and become part of the grids of the dark orange bearings just south of the Brooklyn Navy Yard. One of the main things I was interested in doing with this project was analyzing the 'borders' of groups of grids and how their edges met to bond together. </p>
+              <p style="padding-left:33%">Note how the purple bearings on the Brooklyn ends of the Manhattan and Brooklyn bridges merge with and become part of the grids of the dark orange bearings just south of the Brooklyn Navy Yard. One of the main things I was interested in doing with this project was analyzing the 'borders' of groups of grids and how their edges met to bond together. </p>
             </div>
           </div>
 
@@ -57,7 +57,7 @@
             <img src="pictures/osmnx_williamsburg.png" alt="osmnx-grids of Williamsburg, Brooklyn">
             <div class="carousel-caption">
               <h3>Williamsburg, Brooklyn</h3>
-              <p>A close up of Williamsburg, a neighborhood of Brooklyn with a particularly interesting street pattern. Note the rainbow pattern on the curved sections of the Williamsburg Bridge and Interstate 278 as it changes as its segments change bearings.</p>
+              <p style="padding-left:33%">A close up of Williamsburg, a neighborhood of Brooklyn with a particularly interesting street pattern. Note the rainbow pattern on the curved sections of the Williamsburg Bridge and Interstate 278 as it changes as its segments change bearings.</p>
             </div>
           </div>
         </div>
