Fix projects.html styling

--- a/projects.html
+++ b/projects.html
@@ -26,14 +26,15 @@
         </ul>
       </div>
     </nav>
-    <div class="container-fluid col-md-12" id="project-gallery">
+    <div class="container-fluid col-md-12" id="project-gallery" style="padding-left:0">
       <div class="row">
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="ripta-dash.html">
               <img src="pictures/ripta-dashboard.png" alt="RIPTA Dashboard" style="width:100%">
               <div class="caption">
-                <p>RIPTA Dashboard</p>
+                <h3 class="caption-title">RIPTA Dashboard</h3>
+                <p class="subcaption">Real-time location and data of Providence buses</p>
               </div>
             </a>
           </div>
@@ -43,7 +44,8 @@
             <a href="osmnx-grids.html">
               <img src="pictures/osmnx_nyc_crop.png" alt="osmnx-grids of New York City by compass bearing" style="width:100%">
               <div class="caption">
-                <p>Grid Analysis with OSMnx</p>
+                <h3 class="caption-title">OSMnx Grid Analysis</h3>
+                <p class="subcaption">Using OSMnx to analyze the grids of New York City</p>
               </div>
             </a>
           </div>
@@ -53,7 +55,8 @@
             <a href="gb-github-pages.html">
               <img src="pictures/Favicon.png" alt="Favicon of Gbachant.github.io" style="width:100%">
               <div class="caption">
-                <p>This Site</p>
+                <h3 class="caption-title">This Site</h3>
+                <p class="subcaption">A custom website built from scratch</p>
               </div>
             </a>
           </div>
